Otimização de código.